# kairo-ai

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SOUL.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/desktop/: package.json  tailwind.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
benchmarks/: triage-frames.jsonl
config/: default-mcp-servers.json  default-models.toml  default-permissions.toml
crates/kairo-core/: Cargo.toml
crates/kairo-core/examples/: hello_world.rs
crates/kairo-core/src/: config.rs  lib.rs
crates/kairo-core/src/health/: mod.rs  repair.rs
crates/kairo-core/src/memory/: episodic.rs  mod.rs  raw_log.rs  semantic.rs
crates/kairo-core/src/orchestrator/: events.rs  mod.rs  spawn.rs  stream.rs
crates/kairo-core/src/senses/: audio.rs  context.rs  frame.rs  mod.rs  types.rs  vision.rs
crates/kairo-core/src/senses/audio/: full.rs  mod.rs  stub.rs
crates/kairo-core/src/triage/: handlers.rs  llm.rs  mod.rs  prompts.rs
crates/kairo-core/src/voice/: mod.rs  stt.rs  tts.rs  wake.rs
crates/kairo-core/src/workers/: mod.rs  pool.rs  supervisor.rs
crates/kairo-llm/: Cargo.toml
crates/kairo-llm/src/: lib.rs
crates/kairo-mcp/: Cargo.toml
crates/kairo-mcp/src/: main.rs
crates/kairo-mcp/src/tools/: memory.rs  mod.rs  perception.rs  schedule.rs  shell.rs  system.rs  voice.rs  windows.rs  workers.rs
crates/kairo-vision/: Cargo.toml
crates/kairo-vision/src/: error.rs  lib.rs  onnx.rs
docs/: phase-1-smoke-test.md  senses.md  triage.md
docs/decisions/: 001-vision-model.md  002-screen-capture.md  003-audio-pipeline.md  004-triage-model.md
prompts/: orchestrator-system.md  repair-agent-system.md  salience-heuristics.md  triage-grammar.gbnf  triage-system.md
scripts/: dev-setup.ps1  download-models.ps1  install.ps1
skills/: README.md
skills/code-review/: SKILL.md
skills/daily-briefing/: SKILL.md
skills/project-context/: SKILL.md
