[workspace]
members = [
    "crates/kairo-core",
    "crates/kairo-mcp",
    "crates/kairo-llm",
    "crates/kairo-vision",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PrincNL/kairo-ai"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
llama-cpp-2 = { version = "0.1", default-features = false, features = ["sampler"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "load-dynamic"] }
image = "0.25"
ndarray = "0.17"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
