[package]
name = "kairo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Main orchestration runtime for Kairo — the four-layer cognitive engine"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
image = { workspace = true }

# Phase 1: Senses layer
kairo-vision = { path = "../kairo-vision" }
xcap = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = "6"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
