[package]
name = "kairo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Main orchestration runtime for Kairo — the four-layer cognitive engine"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
image = { workspace = true }

# Phase 1: Senses layer
kairo-vision = { path = "../kairo-vision" }
# Phase 2: Triage layer
kairo-llm = { path = "../kairo-llm" }
llama-cpp-2 = { workspace = true }
xcap = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = "6"
toml = "0.8"

# Audio pipeline (requires LLVM/libclang + cmake for whisper-rs build)
cpal = "0.17"
whisper-rs = "0.16"
rubato = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }

[[bin]]
name = "kairo-perception"
path = "src/bin/kairo-perception.rs"

[[bin]]
name = "kairo-triage-bench"
path = "src/bin/kairo-triage-bench.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
