[package]
name = "kairo-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local LLM runtime wrapper (llama.cpp) for Kairo's triage layer"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
