[package]
name = "kairo-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local vision model runtime (Moondream 2) for Kairo's senses layer"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
