[package]
name = "kairo-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local vision model runtime (SmolVLM-256M) for Kairo's senses layer"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
ort = { workspace = true }
image = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
dirs = "6"
