[package]
name = "kairo-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kairo desktop app — Tauri 2 backend"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
kairo-core = { path = "../../../crates/kairo-core" }
